# SimpleDebog

./: .clang-format  .gitignore  CLA.md  CMakeLists.txt  CONTRIBUTORS.md  GOVERNANCE.md  LICENSE  README.md  beta_test_plan.md  compile
.github/workflows/: build.yml  commitlint.yml  lint.yml  mirror.yml
include/: PlatformDefines.hpp  Trace.hh  syscall.h
include/Decoder/: Decoder.hpp  DecoderFactory.hpp  Include.hpp  NumberDecoder.hpp  PointerDecoder.hpp  StringDecoder.hpp
src/: Trace.cpp  main.cpp
src/backend/commands/: ACommand.hh  ICommand.hh
src/backend/core/: DebuggerEngine.cpp  DebuggerEngine.hh  main.cpp  main.hh
src/backend/events/: DebugEvent.hh
src/backend/native_types/: ArrayType.hh  IntType.cpp  IntType.hh  PointerType.hh  StdTypes.hh  StructType.hh  UnionType.hh
src/backend/platform/: ILowLevelDebugger.cpp  ILowLevelDebugger.hh  ILowLevelDebugger.inl
src/backend/platform/linux/: PtraceWrapper.cpp  PtraceWrapper.hh
src/backend/platform/unknown/: DummyLowLevelDebugger.cpp  DummyLowLevelDebugger.hh
src/frontend/: simpledebog.pro
src/frontend/src/: GuiAdapter.cpp  GuiAdapter.hh  MainWindow.cpp  MainWindow.hh  main.cpp
src/frontend/src/modules/: BreakpointsModule.cpp  BreakpointsModule.hh  CodeModule.cpp  CodeModule.hh  DebugModule.hh  StackModule.cpp  StackModule.hh  StepModule.cpp  StepModule.hh
src/frontend/tests/backend/: MockDebugger.hh
src/frontend/tests/interface/: DebugEventListener.hh  ICommand.hh  IDebugger.hh
src/frontend/tests/shared/models/: StackFrame.hh
src/interface/: DebugEvent.hh  DebugEventListener.hh  ICommand.hh  IDebugger.hh  NativeTypes.hh
tests/: ptrace_wrapper.cpp  test_engine.cpp
tests/mocks/: FakeCommand.cpp  FakeCommand.hh
